# easypaperless

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  publish_testpypi.yml
dev/: PRD.md  scratchbook.md
dev/issues/: 0000-general-index.md  0018-refactoring-resource_based_client_api.md  0019-bug-update_document_nullable_fields_unresettable.md  0020-task-complete_missing_resource_parameters.md  0021-bug-documents_resource_api_inconsistencies.md  0022-bug-is_insensitive_misleading_default_in_create.md  0023-refactoring-hide_low_level_bulk_edit_methods.md  0024-maintenance-add_py_typed_marker.md  0026-refactoring-sync_docstrings_full_param_docs.md  0027-bug-sync_tags_create_wrong_default_values.md  0029-feature-paged_result_model_for_list_methods.md  0031-refactoring-rename_api_key_to_api_token.md  0032-bug-notes_list_missing_paged_result.md  0034-bug-notes_list_crashes_on_plain_array_response.md  0035-feature-users_resource_crud.md  0036-feature-trash_resource.md  0038-feature-document_thumbnail.md  0039-feature-document_bulk_download.md  0040-bug-document_type_filter_ignored_in_list.md  0041-feature-retry_with_backoff_on_transient_errors.md  0042-feature-document_history_endpoint.md
docs/: PRD.md  api-conventions.md  easypaperless.html  search.js
docs/easypaperless/: resources.html
easypaperless/: __init__.py  _embedding.py  client.py  exceptions.py  store.py  sync.py
easypaperless/_internal/: http.py  resolvers.py
easypaperless/models/: __init__.py  _base.py  correspondents.py  custom_fields.py  document_types.py  documents.py  permissions.py  storage_paths.py  tags.py
features/: INDEX.md  PROJ-1-http-client-core.md  PROJ-10-tags-crud.md  PROJ-11-correspondents-crud.md  PROJ-12-document-types-crud.md  PROJ-14-storage-paths-crud.md  PROJ-15-non-document-bulk-operations.md  PROJ-2-name-to-id-resolver.md  PROJ-3-list-documents.md  PROJ-4-get-document.md  PROJ-6-delete-document.md  PROJ-7-download-document.md  PROJ-8-upload-document.md  PROJ-9-document-bulk-operations.md
scripts/: cli.py  mg_quickstart_test.py  mg_quickstart_test_sync.py
src/easypaperless/: __init__.py  client.py  exceptions.py  resources.py  sync.py
src/easypaperless/_internal/: http.py  resolvers.py  sentinel.py
src/easypaperless/_internal/mixins/: documents.py  (+2 more)
src/easypaperless/models/: __init__.py  _base.py  correspondents.py  document_types.py  documents.py  paged_result.py  storage_paths.py  tags.py  users.py
tests/: conftest.py  test_client_bulk.py  test_client_documents.py  test_client_history.py  test_client_notes.py  test_client_tags.py  test_client_trash.py  test_client_upload.py  test_client_users.py  test_embedding.py  test_exceptions.py  test_http.py  test_issue_0020_new_params.py  test_issue_0021_api_inconsistencies.py  test_issue_0028_none_unset_semantics.py  test_issue_0029_paged_result.py  test_issue_0030_logging.py  test_models.py  test_resolvers.py  test_retry.py  test_sentinel.py  test_store.py  test_sync.py
tests/integration/: conftest.py  test_bulk_download.py  test_documents.py  test_notes.py  test_resources.py  test_thumbnail.py  test_upload.py
(+17 files in other folders)
