[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easypaperless"
version = "0.1.0"
description = "A Python API wrapper for paperless-ngx with optional SQLite-backed local cache"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["easypaperless"]
