[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easypaperless"
version = "0.1.0"
description = "A Python API wrapper for paperless-ngx with optional SQLite-backed local cache"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
scripts = [
    "python-dotenv>=1.0",
]
docs = [
    "pdoc>=14",
]
embeddings = [
    "numpy>=1.26",
]
embeddings-st = [
    "easypaperless[embeddings]",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["easypaperless"]
