[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easypaperless"
version = "0.4.1"
description = "A Python API wrapper for paperless-ngx"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Moritz Grenke", email = "info@360mix.de" },
]
keywords = ["paperless", "paperless-ngx", "api", "wrapper", "document management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/TastyMojito/easypaperless"
Repository = "https://github.com/TastyMojito/easypaperless"
Issues = "https://github.com/TastyMojito/easypaperless/issues"

[project.optional-dependencies]
scripts = [
    "python-dotenv>=1.0",
]
docs = [
    "pdoc>=14",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/easypaperless"]

[tool.hatch.build.targets.wheel.force-include]
"src/easypaperless/py.typed" = "easypaperless/py.typed"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = ["integration: live-server integration tests (require PAPERLESS_URL env var)"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.mypy]
python_version = "3.11"
strict = true
